// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File row header component adds multiple ellipsises after 40 characters 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets/javascripts/merge_requests/widget/diffs/notes"
>
  <gl-truncate-stub
    class="bold"
    position="middle"
    text="app/assets/javascripts/merge_requests/widget/diffs/notes"
  />
</div>
`;

exports[`File row header component renders file path 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets"
>
  <gl-truncate-stub
    class="bold"
    position="middle"
    text="app/assets"
  />
</div>
`;

exports[`File row header component trucates path after 40 characters 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets/javascripts/merge_requests"
>
  <gl-truncate-stub
    class="bold"
    position="middle"
    text="app/assets/javascripts/merge_requests"
  />
</div>
`;
